added meta data for social media

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:title" content="Kote Masters"/>
+    <meta property="og:image" content="/icons/KM-Only-Square-WBG-512x512.png"/>
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="A way to show users how their custom gun mods will look before they buy them.">
+    <meta property="og:url" content="/"> <!-- needs to be changes -->
+    <meta name="twitter:card" content="summary_large_image">
     <link rel="icon" type="image/png" href="/icons/KM-Only.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React Showroom</title>
